# rugo

./: .clang_format  .gitignore  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  VERSION.md  example_new_features.py  parquet_tool  pyproject.toml  setup.py  test_new_features.py  test_parquet_decoder.py  test_sample.parquet  verify_version.py
.github/workflows/: release.yml  test.yml
examples/: comprehensive_metadata.py  orso_conversion.py  parquet_example.py
rugo/: __init__.py
rugo/converters/: __init__.py  orso.py
rugo/decoders/: __init__.py  parquet_decoder.cpp  parquet_decoder.html  parquet_decoder.pyx
rugo/parquet/: main.cpp  metadata.cpp  metadata.hpp  metadata_reader.cpp  metadata_reader.pxd  metadata_reader.pyx  parquet_meta  thrift.hpp
tests/: test_all_metadata_fields.py  test_compare_arrow_rugo.py  test_logical_types.py  test_orso_converter.py  test_parquet_decoder.py  test_real_parquet.py  test_statistics.py
tests/data/: 185d5a679a475304.parquet
