[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rugo"
version = "0.1.0"
description = "Parquet Reader"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Justin Joyce", email = "justin.joyce@joocer.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving",
]
keywords = ["file", "decoder", "parquet", "cython"]
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov",
    "build",
    "twine",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/mabel-dev/rugo"
Repository = "https://github.com/mabel-dev/rugo"
Issues = "https://github.com/mabel-dev/rugo/issues"

[tool.setuptools]
packages = ["rugo", "rugo.decoders"]

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.pxi"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"